<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_title_label"/>

    <EditText
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_details_label"/>

    <EditText
        android:id="@+id/question_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_answer_hint"/>

    <Button
        android:id="@+id/question_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="15 April 2023"/>

    <CheckBox
        android:id="@+id/question_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_solved_label"/>

</LinearLayout>